--- a/settings.gradle
+++ b/settings.gradle
@@ -1,17 +1,25 @@
 pluginManagement {
 	repositories {
+		maven { url 'https://jitpack.io' }
+		gradlePluginPortal()
 		google()
 		mavenCentral()
-		gradlePluginPortal()
 	}
 }
 dependencyResolutionManagement {
 	repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
 	repositories {
+		maven { url 'https://jitpack.io' }
 		google()
 		mavenCentral()
 	}
 }
-
 rootProject.name = "emhotel"
-include ':app'
+
+apply from: 'build_system/ext.gradle'
+apply from: 'build_system/modules.gradle'
+
+unpackMapValues(Modules) {
+	include(it)
+	project(it).projectDir = file(nameToPath(it))
+}
