libraries/network finished network base

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="com.shevyakhov.emhotel"
-	xmlns:tools="http://schemas.android.com/tools">
+	xmlns:tools="http://schemas.android.com/tools"
+	package="com.shevyakhov.emhotel">
+
+	<uses-permission android:name="android.permission.INTERNET" />
 
 	<application
 		android:name=".App"
