--- a/build_system/module_types/android_application.gradle
+++ b/build_system/module_types/android_application.gradle
@@ -19,7 +19,7 @@ android {
 		targetSdk Configs.TARGET_SDK
 		testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
-		buildConfigField "String", "BASE_URL", "\"http://107684.web.hosting-russia.ru:8000/api/\""
+		buildConfigField "String", "BASE_URL", "\"https://run.mocky.io/v3/\""
 	}
 
 	buildTypes {
