feature/mainfragment domain|data layer

--- a/features/main/build.gradle
+++ b/features/main/build.gradle
@@ -17,5 +17,6 @@ dependencies {
 	implementation Dependencies.CICERONE
 
 	implementation project(Modules.LIBRARIES.NAVIGATION)
+	implementation project(Modules.LIBRARIES.NETWORK)
 
 }
