feature/hotelrooms  package quickfix + hotelRooms module added

--- a/build_system/modules.gradle
+++ b/build_system/modules.gradle
@@ -3,6 +3,7 @@ ext.Modules = [
 	FEATURES 				: [
 		MAIN				: ":features:main",
 		SPLASH				: ":features:splash",
+		ROOMS				: ":features:hotelrooms",
 	],
 	LIBRARIES				: [
 		NAVIGATION			: ":libraries:navigation",
