feature/booking  data|domain layer + navigation

--- a/build_system/modules.gradle
+++ b/build_system/modules.gradle
@@ -4,6 +4,7 @@ ext.Modules = [
 		MAIN				: ":features:main",
 		SPLASH				: ":features:splash",
 		ROOMS				: ":features:hotelrooms",
+		BOOKING				: ":features:booking",
 	],
 	LIBRARIES				: [
 		NAVIGATION			: ":libraries:navigation",
