--- a/features/booking/build.gradle
+++ b/features/booking/build.gradle
@@ -16,6 +16,8 @@ dependencies {
 	implementation Dependencies.GLIDE
 	implementation Dependencies.CICERONE
 	implementation Dependencies.GSON
+	implementation Dependencies.EXPANDABLE_RV
+	implementation Dependencies.DECORO
 
 	implementation project(Modules.LIBRARIES.NAVIGATION)
 	implementation project(Modules.LIBRARIES.NETWORK)
