feature/confirm_order presentation layer + fake usecase

--- a/build_system/modules.gradle
+++ b/build_system/modules.gradle
@@ -5,6 +5,7 @@ ext.Modules = [
 		SPLASH				: ":features:splash",
 		ROOMS				: ":features:hotelrooms",
 		BOOKING				: ":features:booking",
+		ORDER_CONFIRM		: ":features:orderconfirm",
 	],
 	LIBRARIES				: [
 		NAVIGATION			: ":libraries:navigation",
